--- a/httpRouter/pom.xml
+++ b/httpRouter/pom.xml
@@ -65,6 +65,13 @@
 		    <artifactId>gson</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+		<dependency>
+		    <groupId>org.jsoup</groupId>
+		    <artifactId>jsoup</artifactId>
+		    <version>1.11.3</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>com.github.battlesteed</groupId>
 			<artifactId>httpRouter-test</artifactId>
